 * XML::LibXML::Element doesn't copy attributes on cloneNode, fixed in
    compatibility module

2006-11-06 cjg
 * Reworked parser in Import::DefaultXML to be more SAXY.

2006-11-06 cjg
 * Moved testing the correct UID into the Platform module because it won't
    work on all platforms.
 * Changed $dataobj->get_url( 1 ) to dataobj->get_control_url.
 * Fixed bug in getting new ids for saved searches.
 * Removed debug code from index-stopping-screen
 * Citations now can have /lib level ones as well as repository specific.
 * Fixed bug in edit-linking documents in Details.pm
 * Moved the administer user action to the bottom of the list.
 * Added the description of the search as a parameter to the savedsearch 
    workflow.
 * Added a default citation for saved searches.
 * Removed extra info at the top of the run-saved-search page.
 * Name-Ajax-autocomplete now orders by number of eprints the name appaers
    on.
 * Removed unused coverimage code in eprint_render.pl
 * The last vestages of Apache::AuthDBI have been swept away.
 * Added label to user_radio_hideemail.
 * Added warning to indexer if a single session fails to start.

2006-11-06 tmb
 * Columns in Items and Editorial Screens now displayed according to user preference

2006-11-07 tdb
 * Added Compat::Term::ReadKey module to avoid Term::ReadKey requirement (linux
    support only via stty)
 * Modified Term::ReadKey usage to fallback to Compat::Term::ReadKey.

2006-11-07 moj
 * Fixed typo in epadmin config_db
 * Added event_parse subs to all XML parser modules. LibXML uses the SAX parser, and
    GDOME/DOM use the technique from Import::DefaultXML (with XML::Parser). Takes a 
    filehandle to read from, and a handler object (see the example in Import::DefaultXML)

2006-11-07 moj
 * Added send_status_line to AnApache - this takes a code and message, and does status and
    status_line on the request. This fixes the problem with redirecting.
 * Adjusted other modules to use send_status_line.