@@ -38,7 +38,7 @@ use strict;
 Render a "paginated" view of the list i.e. display a "page" of items 
 with links to navigate through the list.
 
-$basename is currently unused.
+$basename is the basename to use for pagination-specific CGI parameters, to avoid clashes.
 
 %opts is a hash of options which can be used to customise the 
 behaviour and/or rendering of the paginated list. See EPrints::Search 
@@ -361,6 +361,132 @@ sub paginate_list
 		$page = $session->html_phrase( "lib/list:page", %pins );
 	}
 	return $page;
+}
+
+
+######################################################################
+=pod
+
+=item $xhtml = EPrints::Paginate->paginate_list_with_columns( $session, $basename, $list, %opts )
+
+Uses paginate_list to render a table layout with columns displaying
+specified field values. Each column header contains controls which
+can be used to change the order of the list.
+
+%opts has an additional option - columns - which is an array ref of
+fields to display.
+
+=cut
+
+######################################################################
+
+sub paginate_list_with_columns
+{
+	my( $class, $session, $basename, $list, %opts ) = @_;
+
+	my %newopts = %opts;
+	
+	# Build base URL
+	my $url = $session->get_uri . "?";
+	my @param_list;
+	if( defined $opts{params} )
+	{
+		my $params = $opts{params};
+		foreach my $key ( keys %$params )
+		{
+			my $value = $params->{$key};
+			push @param_list, "$key=$value";
+		}
+	}
+	$url .= join "&", @param_list;
+
+	my $offset = $session->param( "$basename\_offset" ) + 0;
+	$url .= "&$basename\_offset=$offset"; # $basename\_offset used by paginate_list
+
+	# Sort param
+	my $sort_order = $session->param( $basename."_order" );
+	if( defined $sort_order && $sort_order ne "" )
+	{
+		$newopts{params}{ $basename."_order" } = $sort_order;
+		$list = $list->reorder( $sort_order );
+	}
+	
+	# URL for images
+	my $imagesurl = $session->get_repository->get_conf( "base_url" )."/style/images";
+	my $esec = $session->get_request->dir_config( "EPrints_Secure" );
+	if( defined $esec && $esec eq "yes" )
+	{
+		$imagesurl = $session->get_repository->get_conf( "securepath" )."/style/images";
+	}
+
+	# Container for list
+	my $table = $session->make_element( "table", border=>0, cellpadding=>4, cellspacing=>0, width=>"100%" );
+	my $tr = $session->make_element( "tr", class=>"header_plain" );
+	$table->appendChild( $tr );
+
+	foreach my $col ( @{ $opts{columns} } )
+	{
+		# Column headings
+		my $th = $session->make_element( "th" );
+		$th->appendChild( $list->get_dataset->get_field( $col )->render_name( $session ) );
+		$tr->appendChild( $th );
+
+		# Sort controls
+		foreach my $dir ( "up", "down" )
+		{
+			my( $ctrl, $ctrl_order );
+
+			if( $dir eq "up" )
+			{
+				$ctrl_order = $col;
+			}
+			else
+			{
+				$ctrl_order = "-" . $col;
+			}
+
+			if( $sort_order ne $ctrl_order )
+			{
+				$ctrl = $session->render_link( "$url&$basename\_order=$ctrl_order" );
+				$ctrl->appendChild( $session->make_element(
+					"img",
+					alt=>$dir,
+					border=>0,
+					src=> "$imagesurl/multi_$dir\.png" ));
+			}
+			else
+			{
+				$ctrl = $session->make_element(
+					"img",
+					alt=>$dir,
+					border=>0,
+					src=> "$imagesurl/multi_$dir\_dim.png" );
+			}
+			$th->appendChild( $ctrl );
+		}
+	}
+	
+	my $info = {
+		row => 1,
+		columns => $opts{columns},
+	};
+	$newopts{container} = $table unless defined $newopts{container};
+	$newopts{render_result_params} = $info unless defined $newopts{render_result_params};
+	$newopts{render_result} = sub {
+		my( $session, $e, $info ) = @_;
+
+		my $tr = $session->make_element( "tr" );
+
+		for( @{ $info->{columns} } )
+		{
+			my $td = $session->make_element( "td" );
+			$tr->appendChild( $td );
+			$td->appendChild( $e->render_value( $_ ) );
+		}
+		return $tr;
+	} unless defined $newopts{render_result};
+	
+	return EPrints::Paginate->paginate_list( $session, $basename, $list, %newopts );
 }
 
 1;
